# amrcast

./: .gitignore  Makefile  README.md  STORY.md  pyproject.toml
docs/: potential_testers.md
experiments/: amrrules_candidate_genes.csv  compare_baseline_esm.py
scripts/: check_group_collapse.py  grouped_vs_random_cv.py  phylo_cv.py  phylo_cv_all.py  singleton_diagnosis.py
src/amrcast/: __init__.py  __main__.py
src/amrcast/cli/: data_cmd.py  main.py  predict_cmd.py  train_cmd.py  train_species.py
src/amrcast/config/: settings.py
src/amrcast/data/: cabbage.py  download.py  harmonize.py  narms_features.py  ncbi_narms.py
src/amrcast/explain/: __init__.py  clinical.py  shap_explainer.py
src/amrcast/features/: aggregator.py  esm_embeddings.py  gene_features.py  reference_proteins.py
src/amrcast/genome/: amr_detection.py  amrfinder.py  annotation.py  models.py  pipeline.py  protein_extractor.py
src/amrcast/ml/: training.py  xgboost_model.py
src/amrcast/models/: download.py
tests/: conftest.py  generate_test_data.py  test_core.py  test_esm.py  test_explain.py
